--- a/src/components/Curicullum/Syllabus/Curicullum.module.css
+++ b/src/components/Curicullum/Syllabus/Curicullum.module.css
@@ -1,10 +1,12 @@
 .cardtemplate{
   width: 180px;
   height: 200px;
+  padding: 15px;
+  
 }
 
 .cardfont{
-  font-size:18px;
+  font-size:22px;
   font-weight:600;
 }
 
